# isenChef

./: .clang-format  README.md  help.md  meson.build
includes/: action_dispatcher.h  actions.h  args.h  args_handlers.h  errors.h  file.h  format_dispatcher.h  formats.h  help.h
src/: action_dispatcher.c  args.c  args_handlers.c  errors.c  file.c  format_dispatcher.c  help.c  main.c
src/actions/: caesar.c  rc4.c  reverse.c  tobase64.c  tohex.c  tolower.c  toupper.c  xor.c
src/formats/: base64.c  hex.c
